--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -3,7 +3,7 @@
   "name": "Listing Inspector",
   "version": "0.1.0",
   "description": "Extract listing images, seller stats, reviews, and generate a trust report.",
-  "permissions": ["activeTab", "scripting", "storage"],
+  "permissions": ["activeTab", "scripting", "storage", "cookies"],
   "host_permissions": ["https://www.etsy.com/*"],
   "action": {
     "default_title": "Listing Inspector",
