--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,4 +3,5 @@ Flask-CORS==4.0.0
 google-generativeai==0.3.0
 python-dotenv==1.0.0
 requests==2.31.0
-Pillow==11.3.0
+Pillow==10.0.0
+textblob==0.17.1
